--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,11 @@
+x-communication:
+    - vue-js >> mercure
+    - mercure >> vue-js
+    - mercure >> php 
+    - php >> mercure
+    - php >> mysql
+    - phpmyadmin >> mysql
+
 version: '3.5'
 services:
     mysql:
